# prod_ai_copilot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  cleaned_api.json  parse_spec.py  pyproject.toml
ML/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
ML/src/: config.py  main.py  schemas.py
ML/src/ml_planner_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ML/src/services/: compress.py  ingest.py  registry.py
ML/tests/: test_compose.py  test_ping.py
backend/: Dockerfile  docker-compose.yml  render.yaml  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_action_ingestion.py  test_actions_api.py  test_capability_service.py  test_execution_service.py  test_get_execution_response.py  test_ping.py  test_pipeline_generate.py  test_pipeline_generation.py  test_pipelines_api.py  test_semantic_selection.py  test_update_pipeline_graph_api.py
demo-backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml
demo-backend/app/: main.py
demo-backend/openapi/: all_linear_scenarios.yaml  crm_linear_pipeline.yaml  marketing.yaml  result.yaml  travel.yaml
demo-backend/tests/: test_linear_workflows.py
docs/: demo_linear_pipeline_openapi.yaml
frontend/: Caddyfile  docker-compose.yml  index.html  nginx.conf  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
solution/: docker-compose.yml  requirements.txt
solution/app/: main.py
solution/tests/: test_ping.py
src/: api.py  schemas.py
src/services/: llm.py  plan.py  registry.py
tests/: test_ingest.py
(+85 files in other folders)
